# virtual-textures

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: ShaderString.cmake  StringifyShaders.cmake
src/: CMakeLists.txt  feedback_buffer.cpp  feedback_buffer.h  globals.hpp  main.cpp  page.cpp  page.h  page_cache.cpp  page_cache.h  page_cache.hpp  page_manager.cpp  page_manager.h  page_manager.hpp  page_table.h  page_tables.cpp  page_tables.h  page_tables.hpp  scene.cpp  scene.hpp  tile.cpp  tile.h  tile_manager.cpp  tile_manager.h  types.h
src/core/: event_dispatcher.h  events.h  framebuffer.cpp  framebuffer.h  geometry.cpp  geometry.h  image.h  image_loader.h  loader.h  orbit_controls.cpp  orbit_controls.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  plane_geometry.h  shaders.cpp  shaders.h  texture2d.cpp  texture2d.h  timer.h  window.cpp  window.h
src/geometries/: plane_geometry.cpp  plane_geometry.h
src/loaders/: image_loader.cpp  image_loader.h  image_loader.hpp
src/resources/: orbit_controls.cpp  orbit_controls.h  zoom_pan_camera.cpp  zoom_pan_camera.h
src/shaders/: feedback.frag  feedback.vert  material.frag  minimap.frag  page.frag  page.vert  sphere.frag  sphere.vert
